feat: add forgot and reset password features
