# internal/dto/auth.dto.go
@@ -61,3 +61,12 @@ type LogoutSwaggerResponse struct {
 	Success bool   `json:"success"`
 	Message string `json:"logout success"`
 }
+
+type ForgotPasswordRequest struct {
+	Email string `json:"email" binding:"required,email"`
+}
+
+type ResetPasswordRequest struct {
+	Token       string `json:"token" binding:"required"`
+	NewPassword string `json:"new_password" binding:"required,min=8"`
+}
